food service first version complete

--- a/ExternalAdapters/YummlyAdapter/Client/src/it/unitn/sde/finalproject/.gitignore
+++ b/ExternalAdapters/YummlyAdapter/Client/src/it/unitn/sde/finalproject/.gitignore
@@ -1,22 +1,37 @@
 /Attributes.class
 /Attribution.class
+/CalculateIngredients.class
+/CalculateIngredientsResponse.class
+/Chocdf.class
+/Chole.class
 /Criteria.class
+/EdamamResponse.class
+/EnercKCAL.class
 /FacetCounts.class
+/Fasat.class
+/Fat.class
+/Fatrn.class
+/Fibtg.class
 /Flavors.class
+/Food.class
+/FoodService.class
 /GetRecipe.class
 /GetRecipeResponse.class
-/GetSpecificRecipe.class
-/GetSpecificRecipeResponse.class
+/GetRecipesByCalories.class
+/GetRecipesByCaloriesResponse.class
 /ImageUrlsBySize.class
 /Images.class
 /Matches.class
+/Na.class
+/Nutrient.class
 /NutritionEstimates.class
 /ObjectFactory.class
-/ReadRecipes.class
-/ReadRecipesService.class
+/Procnt.class
 /Receipt.class
 /ReceiptFinder.class
 /SmallImageUrls.class
 /Source.class
+/Sugar.class
+/TotalNutrients.class
 /Unit.class
 /package-info.class
