--- a/FoodService/Client/src/it/unitn/sde/finalproject/.gitignore
+++ b/FoodService/Client/src/it/unitn/sde/finalproject/.gitignore
@@ -1,7 +1,7 @@
 /Attributes.class
 /Attribution.class
-/CalculateIngredients.class
-/CalculateIngredientsResponse.class
+/CalculateIngredientsValues.class
+/CalculateIngredientsValuesResponse.class
 /Chocdf.class
 /Chole.class
 /Criteria.class
@@ -15,6 +15,8 @@
 /Flavors.class
 /Food.class
 /FoodService.class
+/Get20RecipesByCalories.class
+/Get20RecipesByCaloriesResponse.class
 /GetRecipe.class
 /GetRecipeResponse.class
 /GetRecipesByCalories.class
