--- a/FoodService/pom.xml
+++ b/FoodService/pom.xml
@@ -49,6 +49,11 @@
 			<version>2.2.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>FoodClient</groupId>
+			<artifactId>FoodClient</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 	</dependencies>
 
