--- a/StorageService/.classpath
+++ b/StorageService/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="lib" path="lib/eclipselink.jar"/>
 	<classpathentry kind="lib" path="lib/javax.persistence_2.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.28.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
