--- a/FoodService/pom.xml
+++ b/FoodService/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.introsde.final.project</groupId>
-	<artifactId>YummlyAdapter</artifactId>
+	<groupId>FoodService</groupId>
+	<artifactId>FoodServiceAdapter</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>YummlyExternalAdapter</name>
+	<name>FoodServiceExternalAdapter</name>
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
