--- a/WebAppRest/pom.xml
+++ b/WebAppRest/pom.xml
@@ -55,25 +55,26 @@
 			<artifactId>jackson-core-asl</artifactId>
 			<version>1.9.13</version>
 		</dependency>
-		
+
 		<dependency>
-		  <groupId>StorageServiceClient</groupId>
-		  <artifactId>StorageServiceClient</artifactId>
-		  <version>0.0.1-SNAPSHOT</version>
+			<groupId>StorageServiceClient</groupId>
+			<artifactId>StorageServiceClient</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<!-- end required by jersey -->
-    
-    <dependency>
-      <groupId>FoodClient</groupId>
-      <artifactId>FoodClient</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    
-    <dependency>
-      <groupId>CaloriesCalculatorClient</groupId>
-      <artifactId>CaloriesCalculatorClient</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
+
+		<dependency>
+			<groupId>FoodService</groupId>
+			<artifactId>FoodServiceAdapter</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>CaloriesCalculatorClient</groupId>
+			<artifactId>CaloriesCalculatorClient</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 
 	</dependencies>
