--- a/WebAppRest/pom.xml
+++ b/WebAppRest/pom.xml
@@ -57,16 +57,23 @@
 		</dependency>
 
 		<dependency>
-			<groupId>StorageServiceClient</groupId>
-			<artifactId>StorageServiceClient</artifactId>
+			<groupId>StorageService</groupId>
+			<artifactId>StorageService</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
 		<!-- end required by jersey -->
 
 		<dependency>
 			<groupId>FoodService</groupId>
 			<artifactId>FoodServiceAdapter</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>CaloriesCalculatorService</groupId>
+			<artifactId>CaloriesCalculatorService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
