--- a/SuggestedActivitiesService/pom.xml
+++ b/SuggestedActivitiesService/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>SuggestedActivityService</groupId>
-	<artifactId>SuggestedActivityService</artifactId>
+	<groupId>SuggestActivitiesService</groupId>
+	<artifactId>SuggestActivitiesService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>SuggestedActivityService</name>
+	<name>SuggestActivitiesService</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -60,5 +60,10 @@
 			<version>2.2.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>StorageService</groupId>
+			<artifactId>StorageService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
