--- a/WebAppRest/pom.xml
+++ b/WebAppRest/pom.xml
@@ -41,11 +41,11 @@
 			<artifactId>jackson-core-asl</artifactId>
 			<version>1.9.13</version>
 		</dependency>
-		
+
 		<dependency>
-		  <groupId>org.jsoup</groupId>
-		  <artifactId>jsoup</artifactId>
-		  <version>1.7.3</version>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.3</version>
 		</dependency>
 
 		<dependency>
@@ -74,25 +74,25 @@
 			<version>2.9.2</version>
 		</dependency>
 
-		<!-- <dependency>
-		  <groupId>edu.uci.ics</groupId>
-		  <artifactId>crawler4j</artifactId>
-		  <version>3.5</version>
-		</dependency> -->
-    
-    <dependency>
-		  <groupId>com.blacklocus</groupId>
-		  <artifactId>crawler4j</artifactId>
-		  <version>3.3.2</version>
+		<dependency>
+			<groupId>SuggestActivitiesService</groupId>
+			<artifactId>SuggestActivitiesService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-            
-		
-		<!-- <dependency>
-		  <groupId>org.apache.httpcomponents</groupId>
-		  <artifactId>httpclient</artifactId>
-		  <version>4.3.1</version>
-		</dependency> -->
-            
+
+		<!-- <dependency> <groupId>edu.uci.ics</groupId> <artifactId>crawler4j</artifactId> 
+			<version>3.5</version> </dependency> -->
+
+		<dependency>
+			<groupId>com.blacklocus</groupId>
+			<artifactId>crawler4j</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+
+
+		<!-- <dependency> <groupId>org.apache.httpcomponents</groupId> <artifactId>httpclient</artifactId> 
+			<version>4.3.1</version> </dependency> -->
+
 
 	</dependencies>
 
