--- a/WebAppRest/pom.xml
+++ b/WebAppRest/pom.xml
@@ -75,6 +75,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>MotivationalQuotes</groupId>
+			<artifactId>MotivationalQuotes</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>SuggestActivitiesService</groupId>
 			<artifactId>SuggestActivitiesService</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
